editor: reduced urlparam names; added icons to entities for better visibility https://github.com/Auden-Musulin-Papers/amp-app-dev/issues/6

--- a/html/css/micro-editor.css
+++ b/html/css/micro-editor.css
@@ -174,6 +174,26 @@ input:checked + .i-slider:before {
   font-weight: bold;
 }
 
+.wrk::before {
+  content: url("../images/icons/book.svg");
+}
+
+.org::before {
+  content: url("../images/icons/building.svg");
+}
+
+.eve::before {
+  content: url("../images/icons/calendar-event.svg");
+}
+
+.pers::before {
+  content: url("../images/icons/person-fill.svg");
+}
+
+.plc::before {
+  content: url("../images/icons/geo-alt-fill.svg");
+}
+
 .slider-number::after {
   content: "(" attr(data) ")";
   color: #444;
